<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        app:cardCornerRadius="20dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="343dp"
        android:layout_height="200.19dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/imageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="120dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/iconmonstr_heart_thin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_explore"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/background"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/cardView_explore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/category_btn"
                android:insetBottom="0dp"
                android:insetTop="0dp"
                app:cornerRadius="10dp"
                android:backgroundTint="@color/category_color"
                android:layout_marginTop="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="8sp"
                android:text="@string/category_text"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="23dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/access_text"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="29dp"
            android:layout_gravity="bottom|end"
            android:textColor="@color/background"
            android:textSize="11sp"
            android:text="@string/accessibility_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/participants_text"
            android:textSize="11sp"
            android:textColor="@color/background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/text_price"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="bottom|start"
            android:textSize="12sp"
            android:textColor="@color/background"
            android:text="@string/price_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/money_svg"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="57dp"
            android:layout_gravity="bottom"
            android:src="@drawable/money_bag"
            android:layout_width="15dp"
            android:layout_height="15dp"/>


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="152dp"
            android:layout_width="295dp"
            android:layout_height="36dp">


            <TextView
                android:id="@+id/free_text"
                android:layout_marginStart="2dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/background"
                android:text="@string/free_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <ImageView
                android:id="@+id/oneUser_svg"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="45dp"
                android:src="@drawable/user_one"
                android:layout_width="24dp"
                android:layout_height="23dp"/>

            <ImageView
                android:id="@+id/twoUsers_svg"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/user_icon"
                android:layout_width="24dp"
                android:layout_height="23dp"/>

            <ImageView
                android:id="@+id/threeUsers_svg"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/ic_icon_three"
                android:layout_width="24dp"
                android:layout_height="23dp"/>

            <ImageView
                android:id="@+id/fourUsers_svg"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="6dp"
                android:src="@drawable/user_four"
                android:layout_width="24dp"
                android:layout_height="23dp"/>

            <ImageView
                android:id="@+id/accessibility_svg"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="26dp"
                android:src="@drawable/accessibility"
                android:layout_width="71dp"
                android:layout_height="10dp"/>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="343dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/next_background"
        android:text="@string/next_button"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <TextView
        android:layout_marginLeft="14dp"
        android:layout_marginTop="369dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="13sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:text="@string/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginTop="368dp"
        android:layout_marginBottom="8dp"
        android:text="@string/price_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/double_slider1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="395dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="158dp"
        android:layout_height="41dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/type_color"
            android:textSize="15sp"
            android:text="@string/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_marginEnd="8dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.cardview.widget.CardView>

    <SeekBar
        android:id="@+id/double_slider1"
        android:layout_width="177dp"
        android:layout_height="14dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="320dp"
        android:src="@drawable/double_slider"
        app:layout_constraintTop_toBottomOf="@id/price_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/accessibility_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/double_slider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.653"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/double_slider2"
        android:layout_width="177dp"
        android:layout_height="14dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="120dp"
        android:src="@drawable/double_slider"
        app:layout_constraintTop_toBottomOf="@id/price_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>